[package]
name = "rusty-rocket"
version = "0.1.0"
authors = ["Vicente <vicentedpsantos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
serde_json = "1.0"
base64 = "0.13"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["json", "diesel_sqlite_pool"]
